# EchoSmith

./: .gitignore  CHANGELOG-CICD-FIX.md  LICENSE  README.md  pyproject.toml  start_dev.sh
.github/: RELEASE.md
.github/workflows/: build.yml  ci.yml
backend/: __main__.py  app.py  asr_engine.py  requirements.txt  task_store.py  url_downloader.py
docs/: ASR_OPTIMIZATION.md
frontend/: .eslintrc.cjs  .prettierrc.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/components/: BatchTaskComposer.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ModelDownloadGuide.tsx  ResultPanel.tsx  TaskComposer.tsx  TaskStreamPanel.tsx  ThemeToggle.tsx  UrlTaskComposer.tsx
frontend/src/components/ui/: aurora-background.tsx  button.tsx  card.tsx  progress.tsx
frontend/src/hooks/: useTaskSubscription.ts  useTasksStore.ts  useTheme.ts
frontend/src/lib/: api.test.ts  api.ts  backendStatus.ts  constants.ts  utils.ts
frontend/src/styles/: tailwind.css
scripts/: build_backend.ps1  build_backend.sh  build_dmg.sh  build_local_dmg.sh  download_models.py  package_all.ps1  package_all.sh
tauri/: package-lock.json  package.json
tauri/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
tauri/src-tauri/capabilities/: main.json
tauri/src-tauri/frontend_resources/: README.md
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/permissions/: default.toml
tauri/src-tauri/src/: main.rs
