[package]
name = "echosmith"
version = "0.1.0"
authors = ["EchoSmith Team"]
edition = "2021"

[build-dependencies]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [] }
tauri-plugin-log = "0.2"
portpicker = "0.2"
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
